import org.gradle.api.tasks.compile.AbstractCompile
import org.gradle.api.tasks.compile.GroovyCompile
import org.gradle.api.tasks.compile.JavaCompile
import org.gradle.jvm.toolchain.JavaLanguageVersion

/*
 * This file was generated by the Gradle 'init' task.
 */
plugins {
	// Apply the java Plugin to add support for Java.
	id('java')
	id('jacoco')
	id('java-library')
	id("net.minecraftforge.licenser")
	id('groovy')
	id("io.freefair.lombok")
	id('eclipse')
}

group = 'com.sqlapp'

repositories {
	// Use Maven Central for resolving dependencies.
	mavenCentral()
}

java {
	withJavadocJar();
	withSourcesJar();
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
	toolchain {
		languageVersion = JavaLanguageVersion.of(21);
	}
}

javadoc {
	options {
		author=false
		locale='en_US'
		encoding=defaultEncoding
		docEncoding=defaultEncoding
		charSet=defaultEncoding
	}
	if(JavaVersion.current().isJava9Compatible()) {
		options.addBooleanOption('html5', true)
	}
	failOnError=false
	source = sourceSets.main.allJava
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = defaultEncoding
}

tasks.withType(AbstractCompile).configureEach {
	it.options.encoding = defaultEncoding
}

tasks.withType(GroovyCompile).configureEach {
	groovyOptions.encoding = defaultEncoding
}

compileJava {
	options.encoding = defaultEncoding
	options.compilerArgs = [
		"-Xlint:unchecked",
		"-Xlint:deprecation",
		'-parameters'
		//			, "--module-path", classpath.asPath
	]
}
compileTestJava {
	options.encoding = defaultEncoding
	options.compilerArgs = [
		"-Xlint:unchecked",
		"-Xlint:deprecation",
		'-parameters'
		//			, "--module-path", classpath.asPath
	]
}

eclipseJdt.doLast {
	File f = file('.settings/org.eclipse.core.resources.prefs')
	f.write('eclipse.preferences.version=1\n')
	f.append('encoding/<project>=utf-8')
}

eclipse {
	project {
		buildCommand 'org.eclipse.buildship.core.gradleprojectbuilder'
		natures 'org.eclipse.buildship.core.gradleprojectnature'
	}
	classpath {
		downloadSources = true
		downloadJavadoc = true
	}
	// Eclipse から "Refresh Gradle Project" を呼び出した時に実行されるタスク
	synchronizationTasks 'cleanEclipse', 'eclipse'
}

dependencies {
	// For test
	testImplementation("org.hamcrest:hamcrest-library:3.0")

	testImplementation("cglib:cglib-nodep:3.3.0")
	testImplementation 'org.objenesis:objenesis:3.4'


	testImplementation(platform('org.junit:junit-bom:6.1.0'))
	testImplementation('org.junit.jupiter:junit-jupiter')
	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
}

tasks.named('test') {
	// Use JUnit Platform for unit tests.
	useJUnitPlatform()
	testLogging {
		// テスト時の標準出力と標準エラー出力を表示する
		showStandardStreams = true
		// イベントを出力する (TestLogEvent)
		//events "started", "skipped", "passed", "failed", "standardOut", "standardError"
		events "skipped", "passed", "failed", "standardOut", "standardError"
		// 例外発生時の出力設定 (TestExceptionFormat)
		exceptionFormat = 'full'
	}
	//	jvmArgs(
	//		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
	//		"--add-opens", "java.base/java.util=ALL-UNNAMED"
	//	)
}

jacoco { toolVersion = "0.8.14" }

license {
	charset= defaultEncoding
	properties {
		year = project.inceptionYear
		name = project.developerName
		email = project.developerEmail
		program = project.baseName
	}
	skipExistingHeaders = true
	style {
		java = "JAVADOC"
	}
	header = project.file("../build-logic/lgpl.template")
	exclude ([
		'**/*.properties',
		'**/*.html',
		'**/*.css',
		'**/*.xml',
		'**/*.yaml',
		'**/*.json',
		'**/*.jsonl'
	])
	//	matching(includes: (["**/*.java", "**/*.groovy"]), excludes: (["**/*.html", "**/*.properties"])){
	//	}
}

tasks.register('copyGradleLicense', Copy) {
	from file("../build-logic/license/gradle.license")
	into './license'
}

tasks.register('copyLicense', Copy) {
	from file("../build-logic/license/COPYING")
	from file("../build-logic/license/COPYING.LESSER")
	into './'
}

tasks.register('copyLicenseText', Copy) {
	from file("../build-logic/lgpl.template")
	into './'
	rename {filename->"LICENSE.txt"}
	expand([
		year: project.inceptionYear,
		name: project.developerName,
		email: project.developerEmail,
		program: project.baseName
	])
}

sourceSets {
	generated {
		java {
			srcDirs = ['src/main/generated/']
		}
	}
	main {
		resources {
			srcDirs = ['src/main/resources']
		}
	}
	test {
		resources {
			srcDirs = ['src/test/resources']
		}
	}
}

check.dependsOn updateLicenses
build.dependsOn jacocoTestReport